--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jsweet.candies</groupId>
 	<artifactId>processing</artifactId>
-	<version>3.3.7-SNAPSHOT</version>
+	<version>3.3.7</version>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:jsweet-candies/candy-processing.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:jsweet-candies/candy-processing.git</developerConnection>
 		<url>git:ssh://git@github.com:jsweet-candies/candy-processing.git</url>
-	</scm>
+	  <tag>3.3.7</tag>
+  </scm>
 	<repositories>
 		<repository>
 			<id>jsweet-central</id>
@@ -39,12 +39,12 @@
 		<dependency>
 			<groupId>org.jsweet</groupId>
 			<artifactId>jsweet-core</artifactId>
-			<version>6-SNAPSHOT</version>
+			<version>6.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsweet.extension</groupId>
 			<artifactId>processing-jsweet-support</artifactId>
-			<version>3.3.7-SNAPSHOT</version>
+			<version>3.3.7.1</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
@@ -110,7 +110,7 @@
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
-				<version>2.2.0-SNAPSHOT</version>
+				<version>2.3.0</version>
 				<configuration>
 					<verbose>true</verbose>
 					<outDir>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</outDir>
@@ -153,12 +153,9 @@
 							<target>
 								<echo message="copying generated bundles to dist..." />
 
-								<mkdir dir="dist/"></mkdir>
+								<mkdir dir="dist/" />
 
-								<copy
-									file="src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}/bundle.d.ts"
-									tofile="dist/${project.artifactId}.d.ts" verbose="true"
-									failonerror="false" />
+								<copy file="src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}/bundle.d.ts" tofile="dist/${project.artifactId}.d.ts" verbose="true" failonerror="false" />
 							</target>
 						</configuration>
 						<goals>
@@ -245,7 +242,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
