[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jsweet.candies</groupId>
 	<artifactId>processing</artifactId>
-	<version>3.3.7</version>
+	<version>3.3.7.1-SNAPSHOT</version>
 	<scm>
-		<connection>scm:git:ssh://git@github.com/jsweet-candies/candy-processing.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/jsweet-candies/candy-processing.git</developerConnection>
-		<url>git:ssh://git@github.com/jsweet-candies/candy-processing.git</url>
-	  <tag>3.3.7</tag>
+		<connection>scm:git:ssh://git@github.com/elyulka/candy-processing.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/elyulka/candy-processing.git</developerConnection>
+		<url>git:ssh://git@github.com/elyulka/candy-processing.git</url>
+	  <tag>HEAD</tag>
   </scm>
 	<repositories>
 		<repository>
